added dummy data and method to create db from script
