# app/routes/dummyDataRoute.js
@@ -1,0 +1,13 @@
+// @ts-check
+
+import express from 'express';
+
+import { loadDummyData } from '../controllers/dummyDataController';
+import { signUpUserSchema, logInUserSchema } from '../schema/user';
+import verifyAuth from '../middlewares/auth';
+
+const router = express.Router();
+
+router.get('/load_data', loadDummyData);
+
+export default router;
